--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -4,7 +4,7 @@
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="./img/eudc2017-logo.png">
+                <i class="card-notification--icon ion-icon ion-ios-paper-outline"></i>
                 <h2>{{ card.title }}</h2>
             </div>
 
