#109297960 #138264115 #138264173 User can now see the map of TUT campus from the Maps section

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,8 +21,8 @@
         <ion-item class="menu-item menu--item-active" menu-close href="#/app/tournamentFeed">
           <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/map">
-          <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
+        <ion-item class="menu-item" menu-close href="#/app/maps">
+          <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Maps
         </ion-item>
         <ion-item class="menu-item" menu-close href="#/app/contacts">
           <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
