--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -664,6 +664,11 @@ ion-toolbar {
   margin-top: 100px;
 }
 
+.contacts-mail-phone--container {
+  display: flex;
+  justify-content: center;
+}
+
 .contacts--icon {
   @include social-icon--template;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
