--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -8,6 +8,10 @@
         <div class="padding-div">
             <p class="text-center">If you have any questions or feedback, please feel free to contact our organising committee. Like us on <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><strong>Facebook</strong></a>                and get our latest news and updates in your feed!
             </p>
+                <div class="contacts-mail-phone--container">
+                <a href="mailto:info.tallinneudc@debate.ee"><i class="contacts--icon ion-ios-email"></i></a>
+                <a href="tel:+37259055722"><i class="contacts--icon ion-ios-telephone"></i></a>
+                </div>
         </div>
         <div class="padding-div text-center">
             <p>
@@ -72,7 +76,6 @@
                 Republic of Estonia
             </p>
         </div>
-
 
     </ion-content>
 </ion-view>
