Made static maps scrollable, added default scroll locations, changed map to ENG version

--- a/www/templates/roundLocation.html
+++ b/www/templates/roundLocation.html
@@ -2,7 +2,7 @@
   <ion-content scroll="true">
     <ion-scroll zoom="true" style="position:fixed;display:inline;top:0px;right:0;bottom:0;left:0px;" direction="xy">
 
-      <img src="{{imgurl}}" width="660" height="620" alt="Round Location Map" />
+      <img src="{{imgurl}}" overflow-scroll="false" zooming="true" width="660" height="620" alt="Round Location Map" />
 
     </ion-scroll>
   </ion-content>
