--- a/www/templates/tlnMap.html
+++ b/www/templates/tlnMap.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Tallinn venue map">
+﻿<ion-view title="Venue map">
     <ion-content>
 
 <div id="map" data-tap-disabled="true"></div>
