The e-mails in Contacts view are now also clickable

--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -22,7 +22,7 @@
                 <strong>Selene Gnadenteich</strong>
             </h4>
             <p>
-                info.tallinneudc@debate.ee
+                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
             </p>
         </div>
         <div class="content--separator-line-xs"></div>
@@ -34,8 +34,8 @@
             <h4>
                 <strong>Olesja Zorina</strong>
             </h4>
-            <p>
-                tallinneudc@debate.ee
+            <p>               
+                <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
             </p>
         </div>
         <div class="content--separator-line-xs"></div>
@@ -47,8 +47,8 @@
             <h4>
                 <strong>Jane Kalnapenkis</strong>
             </h4>
-            <p>
-                jane.kalnapenkis@debate.ee
+            <p>             
+                <a href="mailto:jane.kalnapenkis@debate.ee">jane.kalnapenkis@debate.ee</a>
             </p>
         </div>
         <div class="padding-div">
