Added badge view

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,6 +33,9 @@
         <ion-item class="menu-item" menu-close href="#/app/about">
           <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
         </ion-item>
+        <ion-item class="menu-item" menu-close href="#/app/badgeView">
+          <i class="menu-item__icon menu-item__icon--badge ion-ribbon-b"></i>Badges
+        </ion-item>
 
       </ion-list>
     </ion-content>
