--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,50 +1,68 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-  <ion-side-menu side="left" class="side-menu">
-    <ion-header-bar class="bar-stable">
-      <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo" />
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item class="menu-item menu--item-active" menu-close href="#/app/tournamentFeed">
-          <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
-        </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/maps">
-          <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Maps
-        </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/contacts">
-          <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
-        </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/calendar">
-          <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
-        </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/about">
-          <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
-        </ion-item>
-        <ion-item class="menu-item" menu-close href="#/app/badgeView">
-          <i class="menu-item__icon menu-item__icon--badge ion-ribbon-b"></i>Badges
-        </ion-item>
+    <ion-side-menu side="left" class="side-menu">
+        <ion-header-bar class="bar-stable">
+            <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo"/>
+        </ion-header-bar>
+        <ion-content>
+            <ion-list>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'tournamentFeed' }"
+                          ng-click="changeClassToActive('tournamentFeed')"
+                          menu-close
+                          href="#/app/tournamentFeed">
+                    <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
+                </ion-item>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'maps' }"
+                          ng-click="changeClassToActive('maps')"
+                          menu-close
+                          menu-close href="#/app/maps">
+                    <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Maps
+                </ion-item>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'contacts' }"
+                          ng-click="changeClassToActive('contacts')"
+                          menu-close
+                          href="#/app/contacts">
+                    <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
+                </ion-item>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'calendar' }"
+                          ng-click="changeClassToActive('calendar')"
+                          menu-close
+                          href="#/app/calendar">
+                    <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
+                </ion-item>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'about' }"
+                          ng-click="changeClassToActive('about')"
+                          menu-close
+                          href="#/app/about">
+                    <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
+                </ion-item>
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'badges' }"
+                          ng-click="changeClassToActive('badges')"
+                          menu-close
+                          href="#/app/badgeView">
+                    <i class="menu-item__icon menu-item__icon--badge ion-ribbon-b"></i>Badges
+                </ion-item>
 
-      </ion-list>
-    </ion-content>
-    <ion-footer>
-      <ion-toolbar>
-        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
-        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
-        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
-      </ion-toolbar>
-    </ion-footer>
-  </ion-side-menu>
+            </ion-list>
+        </ion-content>
+        <ion-footer>
+            <ion-toolbar>
+                <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+                <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+                <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+            </ion-toolbar>
+        </ion-footer>
+    </ion-side-menu>
 </ion-side-menus>
