--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -51,6 +51,21 @@
                 <a href="mailto:jane.kalnapenkis@debate.ee">jane.kalnapenkis@debate.ee</a>
             </p>
         </div>
+
+        <div class="content--separator-line-xs"></div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Equity officer</b>
+            </p>
+            <img src="./img/margo_photo.jpeg" />
+            <h4>
+                <strong>Margo Loor</strong>
+            </h4>
+            <p>
+                <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
+            </p>
+        </div>
+
         <div class="padding-div">
             <h3 class="title text-center" style="position:relative;padding-top:50px;">Feedback & Questions</h3>
             <div class="content--separator-line"></div>
