--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -79,7 +79,7 @@
         <div class="padding-div contacts-social--container">
             <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
             <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i class="contacts--icon ion-social-facebook"></i></a>
-            <a href="facebook://www.facebook.com/TTUDebate/?fref=ts"><i class="contacts--icon ion-social-instagram"></i></a>
+            <a href="instagram://www.instagram.com/tallinneudc2017/"><i class="contacts--icon ion-social-instagram"></i></a>
         </div>
 
         <div class="padding-div text-center">
