--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -38,6 +38,18 @@
                 <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
             </p>
         </div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Equity</b>
+            </p>
+            <img src="./img/selene_photo.jpg" />
+            <h4>
+                <strong>Selene Gnadenteich</strong>
+            </h4>
+            <p>
+                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
+            </p>
+        </div>
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
             <p>
