--- a/www/templates/event.html
+++ b/www/templates/event.html
@@ -14,7 +14,7 @@
 
                 <p>Location: {{ event.room }}</p>
             </div>
-            <div class="item item-footer">
+            <div class="item item-avatar">
                 <div id="footer-logo-div"><img id="footer-logo" src="{{ logoUrl }}"></div>
             </div>
         </div>
