--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -5,7 +5,7 @@
         <div class="content">
             <div class="padding">
                 <h2 class="text-center">Tallinn EUDC</h2>
-                <div class="content--separator-line"></div>
+                <div class="content__separator-line"></div>
                 <h4 class="text-center" style="margin-top: 35px;">Important information</h4>
                 <div class="about-points">
                     <i class="contacts--icon ion-calendar"></i>
@@ -16,7 +16,7 @@
                 </div>
                 <div class="about--content-paragraph_container">
                     <h2 class="text-center">Opening Words</h2>
-                    <div class="content--separator-line"></div>
+                    <div class="content__separator-line"></div>
                     <p class="pragraph">It is our great pleasure to welcome you to the European Universities Debating Championship 2017! Tallinn
                         EUDC will take place from 14 – 20 August 2017 in Tallinn University of Technology (TUT) which is
                         the only campus-type university in the Baltic countries and one of the most compact university campuses
@@ -30,7 +30,7 @@
                     </p>
                     <img class="fit-img" src="./img/Zeit_Debatte_Wien_-_Finale-02.jpg" alt="dabate image" />
                     <h3 class="text-center">The European University Debating Championships</h4>
-                        <div class="content--separator-line-xs"></div>
+                        <div class="content__separator-line-xs"></div>
                         <p class="pragraph">
                             The European Universities Debating Championship (EUDC) is an annual tournament in which debating societies from Universities
                             across Europe compete. The first championship took place in Rotterdam in 1999, when EUDC was
@@ -39,7 +39,7 @@
                             continent.
                         </p>
                         <h3 class="text-center">University Debating</h4>
-                            <div class="content--separator-line-xs"></div>
+                            <div class="content__separator-line-xs"></div>
                             <p class="pragraph">
                                 In competitive university debating students train their argumentative skills as well as their general knowledge and rhetorical
                                 abilities. Students hold speeches on current topics and try to convince judges of their stance.
