--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -2,13 +2,8 @@
     <div class="card-detail-view-bg"></div>
     <ion-content>
         <div class="list card">
-
-
-
-
-
             <div class="item item-avatar">
-                <i class="card-notification--icon ion-icon ion-ios-paper-outline"></i>
+                <i class="card-notification--icon ion-icon ion-ios-paper"></i>
                 <h2>{{ card.title }}</h2>
             </div>
 
