#149775349 Fix about and contacts data

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -706,7 +706,7 @@ textarea {
   i {
     margin: 40px;
     &:after {
-      content: '14-17 August';
+      content: '14-20 August';
       position: absolute;
       width: 130px;
       height: 50px;
@@ -717,13 +717,13 @@ textarea {
     }
   }
   .ion-lightbulb:after {
-    content: 'TUT Debate Society';
+    content: 'Estonian Debating Society';
   }
   .ion-briefcase:after {
     content: 'Tallinn University of Technology';
   }
   .ion-person:after {
-    content: '280 participants';
+    content: '220 Teams';
   }
   .ion-power:after {
     content: 'Grand Final, 19th August';
