--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -3,7 +3,7 @@
     <ion-content>
         <div class="padding-div">
             <h3 class="title text-center">Get in touch with us!</h3>
-            <div class="content__separator-line"></div>
+            <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
             <p class="text-center">If you have any questions or feedback, please feel free to contact our organising committee. Like us on <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><strong>Facebook</strong></a>                and get our latest news and updates in your feed!
@@ -25,7 +25,7 @@
                 <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
             </p>
         </div>
-        <div class="content__separator-line-xs"></div>
+        <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
             <p>
                 <b>Sponsors</b>
@@ -38,7 +38,6 @@
                 <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
             </p>
         </div>
-        <div class="content__separator-line-xs"></div>
         <div class="padding-div text-center">
             <p>
                 <b>Equity</b>
@@ -81,7 +80,7 @@
 
         <div class="padding-div">
             <h3 class="title text-center" style="position:relative;padding-top:50px;">Feedback & Questions</h3>
-            <div class="content__separator-line"></div>
+            <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
             <label class="item item-input">
