#149775349 Fix about and contacts data

--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -13,6 +13,38 @@
                 <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone"></i></a>
                 </div>
         </div>
+
+        <div class="padding-div text-center">
+
+            <h4>
+                <strong>Registration information</strong>
+            </h4>
+            <p>
+                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
+            </p>
+        </div>
+
+
+        <div class="padding-div text-center">
+
+            <h4>
+                <strong>Equity team</strong>
+            </h4>
+            <p>
+                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+            </p>
+        </div>
+
+        <div class="padding-div text-center">
+
+            <h4>
+                <strong>Language team</strong>
+            </h4>
+            <p>
+                <a href="mailto:TallinnLanguage@gmail.com">TallinnLanguage@gmail.com</a>
+            </p>
+        </div>
+
         <div class="padding-div text-center">
             <p>
                 <b>Project Manager</b>
@@ -38,31 +70,6 @@
                 <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
             </p>
         </div>
-        <div class="padding-div text-center">
-            <p>
-                <b>Equity</b>
-            </p>
-            <img src="./img/selene_photo.jpg" />
-            <h4>
-                <strong>Selene Gnadenteich</strong>
-            </h4>
-            <p>
-                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
-            </p>
-        </div>
-        <div class="content--separator-line-xs"></div>
-        <div class="padding-div text-center">
-            <p>
-                <b>Media & PR</b>
-            </p>
-            <img src="./img/jane_photo.jpg" />
-            <h4>
-                <strong>Jane Kalnapenkis</strong>
-            </h4>
-            <p>             
-                <a href="mailto:jane.kalnapenkis@debate.ee">jane.kalnapenkis@debate.ee</a>
-            </p>
-        </div>
 
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
@@ -74,7 +81,35 @@
                 <strong>Margo Loor</strong>
             </h4>
             <p>
-                <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
+                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+            </p>
+        </div>
+
+        <div class="content--separator-line-xs"></div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Equity officer</b>
+            </p>
+            <img src="./img/kallina_photo.jpg" />
+            <h4>
+                <strong>Kallina Basli</strong>
+            </h4>
+            <p>
+                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+            </p>
+        </div>
+
+        <div class="content--separator-line-xs"></div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Equity officer</b>
+            </p>
+            <img src="./img/daan_photo.jpg" />
+            <h4>
+                <strong>Daan Welling</strong>
+            </h4>
+            <p>
+                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
             </p>
         </div>
 
@@ -91,7 +126,7 @@
         <div class="padding-div contacts-social--container">
             <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
             <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i class="contacts--icon ion-social-facebook"></i></a>
-            <a href="instagram://www.instagram.com/tallinneudc2017/"><i class="contacts--icon ion-social-instagram"></i></a>
+            <a href="instagram://user?username=tallinneudc2017"><i class="contacts--icon ion-social-instagram"></i></a>
         </div>
 
         <div class="padding-div text-center">
